@@ -69,7 +69,7 @@ class User < ActiveRecord::Base
     c.session_class = Authentication
     c.validates_uniqueness_of_login_field_options = { :message => "^This username has been already taken." }
     c.validates_uniqueness_of_email_field_options = { :message => "^There is another user with the same email." }
-    c.validates_length_of_password_field_options  = { :minimum => 0, :if => :require_password? }
+    c.validates_length_of_password_field_options  = { :minimum => 0, :allow_blank => true, :if => :require_password? }
     c.ignore_blank_passwords = true
   end
 
