@@ -1,4 +1,4 @@
-- remote_form_for(@user) do |f|
+- remote_form_for([:admin, @user]) do |f|
   = link_to_close new_admin_user_path
   = f.error_messages
   = render :partial => "admin/users/profile", :locals => { :f => f }
